Improve kernel generation

--- a/examples/Algorithms/qr.ipynb
+++ b/examples/Algorithms/qr.ipynb
@@ -2,21 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "QRDecomposition:\n",
       "  Kernel count: 8\n",
       "  Intermediate buffers: 0\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 420\n",
-      "  IR Compile time: 1.623700 ms\n",
-      "  Compiler time: 1911.164185 ms\n",
+      "  Lines of generated code: 421\n",
+      "  IR Compile time: 2.029700 ms\n",
+      "  Compiler time: 4833.788086 ms\n",
       "\n"
      ]
     }
