--- a/examples/Algorithms/reshape_reduction.ipynb
+++ b/examples/Algorithms/reshape_reduction.ipynb
@@ -2,33 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "MaxBlock:\n",
       "  Kernel count: 4\n",
       "  Intermediate buffers: 0\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 599\n",
-      "  IR Compile time: 1.130900 ms\n",
-      "  Compiler time: 2372.349609 ms\n",
+      "  Lines of generated code: 629\n",
+      "  IR Compile time: 1.542000 ms\n",
+      "  Compiler time: 1891.294556 ms\n",
       "\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -63,170 +53,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Maximum block using TensorFrost is correct: True\n",
-      "Minimum block using TensorFrost is correct: True\n",
-      "Sum block using TensorFrost is correct: True\n",
-      "Mean block using TensorFrost is correct: True\n",
-      "Norm block using TensorFrost is correct: True\n",
-      "Total maximum using TensorFrost is correct: True\n",
-      "Total minimum using TensorFrost is correct: True\n",
-      "Mean block using TensorFrost is correct: True\n",
-      "Error using TensorFrost: 4.4097402964234815e-08\n",
-      "Maximum block: [0.99931145 0.9956342  0.99758303 0.99581325 0.99954575 0.9963896\n",
-      " 0.9962508  0.99823403 0.9905629  0.9994004 ]\n",
-      "Maximum block: [0.99931147 0.99563418 0.99758303 0.99581327 0.99954575 0.99638963\n",
-      " 0.99625079 0.99823401 0.9905629  0.99940037]\n",
-      "Minimum block: [0.00696175 0.00372529 0.00215267 0.00880481 0.00561988 0.00402297\n",
-      " 0.0025579  0.00073958 0.00643406 0.00042047]\n",
-      "Minimum block: [0.00696175 0.00372529 0.00215267 0.00880481 0.00561988 0.00402297\n",
-      " 0.0025579  0.00073958 0.00643406 0.00042047]\n",
-      "Sum block: [107.63434  101.419266 101.53717  114.351875 107.6549   104.74498\n",
-      "  98.021904 104.42515  108.746605 100.67745 ]\n",
-      "Sum block: [107.63437151 101.41928027 101.53713461 114.35187218 107.65488813\n",
-      " 104.74500263  98.02192778 104.42513209 108.74660121 100.6774631 ]\n",
-      "Mean block: [0.51254445 0.4829489  0.48351035 0.5445327  0.5126424  0.49878561\n",
-      " 0.46677098 0.4972626  0.517841   0.47941643]\n",
-      "Mean block: [0.51254463 0.48294895 0.48351016 0.54453272 0.51264232 0.49878573\n",
-      " 0.46677108 0.49726253 0.51784096 0.47941649]\n",
-      "Norm block: [8.609383  8.254564  8.123816  8.935292  8.430076  8.32823   7.9260926\n",
-      " 8.40384   8.63727   8.028112 ]\n",
-      "Norm block: [8.6093843  8.25456425 8.12381701 8.93529192 8.43007626 8.32822931\n",
-      " 7.92609214 8.40384057 8.63726847 8.02811135]\n",
-      "Total maximum: [0.99954575]\n",
-      "Total maximum: 0.9995457531343975\n",
-      "Total minimum: [0.00042047]\n",
-      "Total minimum: 0.00042047412519607974\n",
-      "Mean block: [[[0.6122218  0.5106602  0.6374334  0.3581457  0.40637988 0.61146873\n",
-      "   0.5473556 ]\n",
-      "  [0.41494924 0.46720046 0.551466   0.7156303  0.42492953 0.63069695\n",
-      "   0.40748015]\n",
-      "  [0.51932395 0.6182621  0.42931733 0.5529996  0.38233095 0.6609152\n",
-      "   0.3407001 ]\n",
-      "  [0.29900345 0.6613943  0.51304394 0.457048   0.39684808 0.49689206\n",
-      "   0.5348925 ]\n",
-      "  [0.5501018  0.5732241  0.517789   0.40728197 0.5589866  0.51921016\n",
-      "   0.4695116 ]\n",
-      "  [0.50746745 0.4550151  0.5369623  0.6282176  0.39081752 0.4300259\n",
-      "   0.43281966]]\n",
-      "\n",
-      " [[0.40778223 0.6312359  0.53005713 0.59018886 0.63044196 0.4729848\n",
-      "   0.5646267 ]\n",
-      "  [0.49560684 0.41459084 0.6300646  0.5411976  0.4155191  0.40842122\n",
-      "   0.59883773]\n",
-      "  [0.42804876 0.5718601  0.61158866 0.43160263 0.39150292 0.50249195\n",
-      "   0.5778289 ]\n",
-      "  [0.51362336 0.40873808 0.47174406 0.6705477  0.47282004 0.46489397\n",
-      "   0.4467488 ]\n",
-      "  [0.49717507 0.50603306 0.5697495  0.5168722  0.51003706 0.5156778\n",
-      "   0.54527664]\n",
-      "  [0.5893692  0.60141623 0.54858816 0.54360133 0.49662703 0.6462456\n",
-      "   0.5460112 ]]\n",
-      "\n",
-      " [[0.6074463  0.47263947 0.5319845  0.5861119  0.7314139  0.4324111\n",
-      "   0.43460694]\n",
-      "  [0.33139327 0.5289856  0.5625125  0.49235162 0.4124081  0.5253057\n",
-      "   0.5320123 ]\n",
-      "  [0.29240745 0.3242216  0.5318451  0.42278475 0.44916597 0.6408511\n",
-      "   0.5070688 ]\n",
-      "  [0.46009055 0.49658865 0.35367504 0.51829636 0.41185403 0.40890867\n",
-      "   0.3154699 ]\n",
-      "  [0.4366625  0.37654486 0.6280733  0.56918114 0.6654998  0.56930774\n",
-      "   0.47117797]\n",
-      "  [0.61165625 0.48952946 0.59665143 0.50514823 0.42206168 0.5975966\n",
-      "   0.47145715]]\n",
-      "\n",
-      " [[0.536929   0.60731494 0.5041657  0.5736521  0.52382815 0.44455886\n",
-      "   0.7058867 ]\n",
-      "  [0.50780845 0.32708964 0.4813053  0.45284867 0.44091278 0.47843152\n",
-      "   0.4823925 ]\n",
-      "  [0.56756145 0.4121365  0.3434098  0.39830163 0.49898893 0.47075838\n",
-      "   0.46596646]\n",
-      "  [0.4485475  0.495677   0.53807175 0.5902752  0.5483756  0.48216563\n",
-      "   0.4817091 ]\n",
-      "  [0.6399126  0.32553902 0.57535815 0.3606408  0.48571014 0.53994644\n",
-      "   0.5106572 ]\n",
-      "  [0.41936892 0.5106516  0.54236406 0.43703547 0.65455467 0.6056243\n",
-      "   0.4266816 ]]\n",
-      "\n",
-      " [[0.4149608  0.5999025  0.48608404 0.5043868  0.57234925 0.48869056\n",
-      "   0.46591735]\n",
-      "  [0.5679208  0.4148096  0.49865785 0.47736126 0.44859546 0.4167828\n",
-      "   0.52129287]\n",
-      "  [0.5478126  0.5955928  0.47481585 0.409137   0.46704435 0.38721633\n",
-      "   0.50265884]\n",
-      "  [0.4948492  0.55364466 0.4225669  0.382003   0.5427442  0.5140251\n",
-      "   0.3987429 ]\n",
-      "  [0.37565368 0.515895   0.56148016 0.35371768 0.59776604 0.5106758\n",
-      "   0.41994333]\n",
-      "  [0.4148137  0.44174552 0.39211518 0.57872    0.554324   0.43148795\n",
-      "   0.5692946 ]]]\n",
-      "Mean block: [[[0.61222175 0.51066014 0.63743339 0.35814573 0.40637986 0.61146874\n",
-      "   0.54735562]\n",
-      "  [0.4149492  0.46720048 0.55146596 0.7156303  0.42492954 0.63069693\n",
-      "   0.40748018]\n",
-      "  [0.51932389 0.61826208 0.4293173  0.55299962 0.38233094 0.66091512\n",
-      "   0.3407001 ]\n",
-      "  [0.29900348 0.66139428 0.51304391 0.45704798 0.39684811 0.49689203\n",
-      "   0.53489246]\n",
-      "  [0.55010181 0.57322411 0.517789   0.40728197 0.55898664 0.5192102\n",
-      "   0.46951159]\n",
-      "  [0.50746746 0.4550151  0.53696227 0.62821758 0.39081751 0.43002591\n",
-      "   0.43281964]]\n",
-      "\n",
-      " [[0.40778224 0.63123591 0.53005711 0.59018887 0.63044196 0.47298478\n",
-      "   0.56462675]\n",
-      "  [0.49560689 0.41459085 0.63006459 0.54119759 0.41551906 0.40842122\n",
-      "   0.59883768]\n",
-      "  [0.42804875 0.57186008 0.61158865 0.4316026  0.39150289 0.50249199\n",
-      "   0.57782883]\n",
-      "  [0.5136233  0.40873814 0.47174401 0.67054776 0.47282005 0.46489397\n",
-      "   0.44674877]\n",
-      "  [0.49717507 0.50603311 0.56974947 0.51687224 0.51003701 0.51567782\n",
-      "   0.54527666]\n",
-      "  [0.58936917 0.60141619 0.54858814 0.54360131 0.49662707 0.64624558\n",
-      "   0.54601118]]\n",
-      "\n",
-      " [[0.60744632 0.47263942 0.53198448 0.58611198 0.73141388 0.43241112\n",
-      "   0.43460691]\n",
-      "  [0.33139324 0.52898565 0.56251248 0.49235164 0.41240811 0.5253057\n",
-      "   0.53201227]\n",
-      "  [0.29240746 0.32422163 0.53184505 0.42278477 0.44916599 0.64085109\n",
-      "   0.50706885]\n",
-      "  [0.46009058 0.49658867 0.35367504 0.5182964  0.41185404 0.40890866\n",
-      "   0.31546992]\n",
-      "  [0.43666252 0.37654484 0.62807324 0.56918114 0.66549984 0.56930772\n",
-      "   0.47117797]\n",
-      "  [0.61165622 0.48952948 0.59665143 0.50514822 0.42206169 0.59759653\n",
-      "   0.47145713]]\n",
-      "\n",
-      " [[0.53692897 0.60731497 0.50416571 0.57365206 0.52382812 0.44455886\n",
-      "   0.70588674]\n",
-      "  [0.5078084  0.32708964 0.48130532 0.45284864 0.44091281 0.47843151\n",
-      "   0.48239255]\n",
-      "  [0.56756143 0.41213649 0.34340978 0.39830164 0.49898893 0.47075839\n",
-      "   0.46596644]\n",
-      "  [0.44854752 0.49567704 0.53807177 0.59027525 0.54837565 0.48216566\n",
-      "   0.4817091 ]\n",
-      "  [0.63991263 0.32553902 0.57535817 0.36064078 0.48571016 0.53994637\n",
-      "   0.5106572 ]\n",
-      "  [0.41936897 0.51065161 0.54236411 0.4370355  0.6545546  0.60562433\n",
-      "   0.42668164]]\n",
-      "\n",
-      " [[0.41496085 0.59990248 0.48608399 0.50438679 0.5723493  0.48869055\n",
-      "   0.46591738]\n",
-      "  [0.56792079 0.41480962 0.49865785 0.4773613  0.44859544 0.4167828\n",
-      "   0.52129293]\n",
-      "  [0.54781257 0.59559283 0.47481585 0.409137   0.46704432 0.38721634\n",
-      "   0.50265887]\n",
-      "  [0.49484922 0.55364462 0.42256692 0.38200303 0.54274417 0.51402502\n",
-      "   0.39874292]\n",
-      "  [0.37565368 0.51589503 0.56148015 0.3537177  0.59776605 0.51067579\n",
-      "   0.41994336]\n",
-      "  [0.4148137  0.44174551 0.39211518 0.57871994 0.55432395 0.43148792\n",
-      "   0.56929458]]]\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
