Basic neural net

--- a/examples/Algorithms/matrix_mul.ipynb
+++ b/examples/Algorithms/matrix_mul.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -14,9 +14,9 @@
       "  Intermediate buffers: 0\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 464\n",
-      "  IR Compile time: 0.483100 ms\n",
-      "  Compiler time: 1782.470947 ms\n",
+      "  Lines of generated code: 414\n",
+      "  IR Compile time: 0.471000 ms\n",
+      "  Compiler time: 1801.499878 ms\n",
       "\n"
      ]
     }
@@ -27,15 +27,15 @@
     "import matplotlib.pyplot as plt\n",
     "import time\n",
     "\n",
-    "tf.initialize(tf.cpu)\n",
+    "tf.initialize(tf.opengl)\n",
     "\n",
     "def matmul():\n",
     "    A = tf.input([-1, -1], tf.float32)\n",
     "    N, M = A.shape\n",
-    "    B = tf.input([-1,  M], tf.float32)\n",
+    "    B = tf.input([M,  -1], tf.float32)\n",
     "    K = B.shape[1]\n",
     "\n",
-    "    C = (tf.sin(A) @ tf.cos(B).T)**2.0\n",
+    "    C = (tf.sin(A) @ tf.cos(B))**2.0\n",
     "\n",
     "    return [C]\n",
     "\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -53,53 +53,89 @@
      "text": [
       "Generated kernels:\n",
       "\n",
-      "extern \"C\" __declspec(dllexport) void kernel_0(uint* var, uint* off, uint* mem, uint work_group_count)\n",
-      "{\n",
-      "  #pragma omp parallel for\n",
-      "  for (int block_id = 0; block_id < work_group_count; block_id++)\n",
+      "#version 460\n",
+      "\n",
+      "uint pcg(uint v) {\n",
+      "  uint state = v * 747796405u + 2891336453u;\n",
+      "  uint word = ((state >> ((state >> 28u) + 4u)) ^ state) * 277803737u;\n",
+      "  return (word >> 22u) ^ word;\n",
+      "}\n",
+      "\n",
+      "float pcgf(uint v) {\n",
+      "  return float(pcg(v)) / float(0xffffffffu);\n",
+      "}\n",
+      "\n",
+      "float asfloat(uint x) {\n",
+      "  return uintBitsToFloat(x);\n",
+      "}\n",
+      "\n",
+      "uint asuint(float x) {\n",
+      "  return floatBitsToUint(x);\n",
+      "}\n",
+      "\n",
+      "uint asuint(int x) {\n",
+      "  return uint(x);\n",
+      "}\n",
+      "\n",
+      "uint asuint(uint x) {\n",
+      "  return x;\n",
+      "}\n",
+      "\n",
+      "int asint(uint x) {\n",
+      "  return int(x);\n",
+      "}\n",
+      "\n",
+      "uniform int off[32];\n",
+      "uniform int var[32];\n",
+      "\n",
+      "layout(std430, binding = 0) buffer memory {\n",
+      "  uint mem[];\n",
+      "};\n",
+      "layout (local_size_x = 16, local_size_y = 16, local_size_z = 1) in;\n",
+      "\n",
+      "void main() {\n",
+      "  int block_id = int(gl_WorkGroupID.x);\n",
+      "  int block_thread_id0 = int(gl_LocalInvocationID.x);\n",
+      "  int block_thread_id1 = int(gl_LocalInvocationID.y);\n",
+      "  int block_thread_id2 = int(gl_LocalInvocationID.z);\n",
+      "\n",
+      "  int v2_0 = block_id;\n",
+      "  int in_block_index_0 = block_thread_id1;\n",
+      "  int in_block_index_1 = block_thread_id0;\n",
+      "  int v2_1 = asint(var[0]) + 16;\n",
+      "  int v2_3 = v2_1 - 1;\n",
+      "  int blocks_shape_1 = v2_3 / 16;\n",
+      "  int out_block_index_0 = v2_0 / blocks_shape_1;\n",
+      "  int v2_4 = out_block_index_0 * blocks_shape_1;\n",
+      "  int out_block_index_1 = v2_0 - v2_4;\n",
+      "  int v2_5 = out_block_index_0 * 16;\n",
+      "  int dim_index_0 = v2_5 + in_block_index_0;\n",
+      "  int v2_6 = out_block_index_1 * 16;\n",
+      "  int dim_index_1 = v2_6 + in_block_index_1;\n",
+      "  bool v2_7 = dim_index_0 < asint(var[1]);\n",
+      "  bool v2_8 = dim_index_1 < asint(var[0]);\n",
+      "  bool is_inside_dispatch = v2_7 && v2_8;\n",
+      "  if (is_inside_dispatch)\n",
       "  {\n",
-      "    for (int block_thread_id1 = 0; block_thread_id1 < 16; block_thread_id1++)\n",
-      "    for (int block_thread_id0 = 0; block_thread_id0 < 16; block_thread_id0++)\n",
+      "    float v3_0 = 0.f;\n",
+      "    for (int v3_3 = 0; v3_3 < asint(var[2]); v3_3 += 1)\n",
       "    {\n",
-      "      int v2_0 = block_id;\n",
-      "      int in_block_index_0 = block_thread_id1;\n",
-      "      int in_block_index_1 = block_thread_id0;\n",
-      "      int v2_1 = asint(var[0]) + 16;\n",
-      "      int v2_3 = v2_1 - 1;\n",
-      "      int blocks_shape_1 = v2_3 / 16;\n",
-      "      int out_block_index_0 = v2_0 / blocks_shape_1;\n",
-      "      int v2_4 = out_block_index_0 * blocks_shape_1;\n",
-      "      int out_block_index_1 = v2_0 - v2_4;\n",
-      "      int v2_5 = out_block_index_0 * 16;\n",
-      "      int dim_index_0 = v2_5 + in_block_index_0;\n",
-      "      int v2_6 = out_block_index_1 * 16;\n",
-      "      int dim_index_1 = v2_6 + in_block_index_1;\n",
-      "      bool v2_7 = dim_index_0 < asint(var[1]);\n",
-      "      bool v2_8 = dim_index_1 < asint(var[0]);\n",
-      "      bool is_inside_dispatch = v2_7 && v2_8;\n",
-      "      if (is_inside_dispatch)\n",
-      "      {\n",
-      "        float v3_0 = 0.f;\n",
-      "        for (int v3_3 = 0; v3_3 < asint(var[2]); v3_3 += 1)\n",
-      "        {\n",
-      "          int v4_0 = dim_index_0 * asint(var[2]);\n",
-      "          int data_id = v4_0 + v3_3;\n",
-      "          float v4_1 = asfloat(mem[off[0] + data_id]); // m0\n",
-      "          float v4_2 = sin(v4_1);\n",
-      "          int v4_3 = dim_index_1 * asint(var[2]);\n",
-      "          int data_id_2 = v4_3 + v3_3;\n",
-      "          float v4_4 = asfloat(mem[off[1] + data_id_2]); // m1\n",
-      "          float v4_5 = cos(v4_4);\n",
-      "          float v4_6 = v4_2 * v4_5;\n",
-      "          float v4_7 = v3_0 + v4_6;\n",
-      "          v3_0 = v4_7;\n",
-      "        }\n",
-      "        float v5_1 = pow(v3_0, 2.f);\n",
-      "        int v5_2 = dim_index_0 * asint(var[0]);\n",
-      "        int data_id_3 = v5_2 + dim_index_1;\n",
-      "        mem[off[2] + data_id_3] = asuint(v5_1); // m2\n",
-      "      }\n",
+      "      int v4_0 = dim_index_0 * asint(var[2]);\n",
+      "      int data_id = v4_0 + v3_3;\n",
+      "      float v4_1 = asfloat(mem[off[0] + data_id]); // m0\n",
+      "      float v4_2 = sin(v4_1);\n",
+      "      int v4_3 = v3_3 * asint(var[0]);\n",
+      "      int data_id_2 = v4_3 + dim_index_1;\n",
+      "      float v4_4 = asfloat(mem[off[1] + data_id_2]); // m1\n",
+      "      float v4_5 = cos(v4_4);\n",
+      "      float v4_6 = v4_2 * v4_5;\n",
+      "      float v4_7 = v3_0 + v4_6;\n",
+      "      v3_0 = v4_7;\n",
       "    }\n",
+      "    float v5_1 = pow(v3_0, 2.f);\n",
+      "    int v5_2 = dim_index_0 * asint(var[0]);\n",
+      "    int data_id_3 = v5_2 + dim_index_1;\n",
+      "    mem[off[2] + data_id_3] = asuint(v5_1); // m2\n",
       "  }\n",
       "}\n",
       "\n"
@@ -115,19 +151,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error: 7.16898e-07\n",
-      "TF Time: 0.08479938507080079\n",
-      "NP Time: 0.0030983448028564452\n",
-      "Speedup: 0.036537349890798994\n",
-      "TF GFLOPS: 3.165535407784828\n",
-      "NP GFLOPS: 86.63834178575681\n"
+      "Error: 9.3534624e-07\n",
+      "TF Time: 0.0002555505633354187\n",
+      "NP Time: 0.0021515573263168335\n",
+      "Speedup: 8.419301833010802\n",
+      "TF GFLOPS: 1050.4201301551013\n",
+      "NP GFLOPS: 124.76332966666713\n"
      ]
     }
    ],
@@ -138,7 +174,7 @@
     "B = tf.tensor(Bnp)\n",
     "\n",
     "start = time.time()\n",
-    "repeat = 10\n",
+    "repeat = 4000\n",
     "for i in range(repeat):\n",
     "    C, = mmul(A, B)\n",
     "Cnp = C.numpy\n",
@@ -148,7 +184,7 @@
     "#compare to numpy\n",
     "start = time.time()\n",
     "for i in range(repeat):\n",
-    "    Cnp2 = (np.sin(Anp) @ np.cos(Bnp).T)**2.0\n",
+    "    Cnp2 = (np.sin(Anp) @ np.cos(Bnp))**2.0\n",
     "np_time = (time.time() - start) / repeat\n",
     "\n",
     "Cerror = np.linalg.norm(Cnp - Cnp2) / np.linalg.norm(Cnp2)\n",
