--- a/examples/Algorithms/neuralnet.ipynb
+++ b/examples/Algorithms/neuralnet.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TensorFrost module loaded in debug mode! Expect slow performance.\n"
+     ]
+    }
+   ],
    "source": [
     "import TensorFrost as tf\n",
     "import numpy as np\n",
@@ -16,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,18 +156,12 @@
     "Xtrain = image_to_vector(data['train_x'])   # (60000 x 784)\n",
     "Ytrain = data['train_y']                    # (60000)\n",
     "Xtest = image_to_vector(data['test_x'])     # (10000 x 784)\n",
-    "Ytest = data['test_y']                      # (10000)\n",
-    "\n",
-    "#permute the data\n",
-    "#np.random.seed(0)\n",
-    "#perm = np.random.permutation(len(Xtrain))\n",
-    "#Xtrain = Xtrain[perm]\n",
-    "#Ytrain = Ytrain[perm]"
+    "Ytest = data['test_y']                      # (10000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -167,13 +169,13 @@
      "output_type": "stream",
      "text": [
       "step:\n",
-      "  Kernel count: 9\n",
-      "  Intermediate buffers: 7\n",
-      "  Host readbacks: 0\n",
+      "  Kernel count: 10\n",
+      "  Intermediate buffers: 8\n",
+      "  Host readbacks: 1\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 444\n",
-      "  IR Compile time: 69.956306 ms\n",
-      "  Compiler time: 1746.814575 ms\n",
+      "  Lines of generated code: 448\n",
+      "  IR Compile time: 90.901108 ms\n",
+      "  Compiler time: 1788.895630 ms\n",
       "\n"
      ]
     }
@@ -189,6 +191,7 @@
     "    return L2\n",
     "\n",
     "def loss(Y, Yhat):\n",
+    "    Y *= 1.0 #tensor view bug\n",
     "    elements = Y.shape[1] * Y.shape[0]\n",
     "    return tf.sum(tf.sum((Y - Yhat) ** 2.0)) / tf.float(elements)\n",
     "\n",
@@ -207,39 +210,50 @@
     "def step():\n",
     "    W = tf.input([-1, -1], tf.float32)\n",
     "    Out, In = W.shape\n",
-    "    X = tf.input([In, -1], tf.float32)\n",
     "    b = tf.input([Out], tf.float32)\n",
-    "    Samples = X.shape[1]\n",
-    "    Y = tf.input([Out, Samples], tf.float32)\n",
-    "    Yhat = forward(W, X, b)\n",
-    "    L = loss(Y, Yhat)\n",
-    "    dW, db = backward(W, X, b, Y, Yhat)\n",
+    "\n",
+    "    X = tf.input([In, -1], tf.float32)\n",
+    "    Y = tf.input([Out, -1], tf.float32)\n",
+    "    \n",
+    "    info = tf.input([2], tf.int32)\n",
+    "    offset = info[0]\n",
+    "    batch_size = info[1]\n",
+    "\n",
+    "    #TODO: implement slicing instead of this crap\n",
+    "    i, j = tf.indices([In, batch_size])\n",
+    "    Xbatch = X[i, j + offset]\n",
+    "    i, j = tf.indices([Out, batch_size])\n",
+    "    Ybatch = Y[i, j + offset]\n",
+    "\n",
+    "    Yhat = forward(W, Xbatch, b)\n",
+    "    L = loss(Ybatch, Yhat)\n",
+    "    dW, db = backward(W, X, b, Ybatch, Yhat)\n",
     "    W, b = update(W, X, b, dW, db, 0.001)\n",
     "\n",
-    "    return [Yhat, L, W, b]\n",
+    "    return [L, W, b]\n",
     "\n",
     "fwd = tf.compile(step)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(784, 1024)\n",
-      "(10, 1024)\n"
+      "(784, 60000)\n",
+      "(10, 60000)\n"
      ]
     }
    ],
    "source": [
-    "TrainSamples = 1024\n",
-    "Xsamples = Xtrain[:TrainSamples].T\n",
-    "Ysamples = np.zeros((10, TrainSamples))\n",
-    "Ysamples[Ytrain[:TrainSamples], np.arange(TrainSamples)] = 1.0\n",
+    "Xsamples = Xtrain.T\n",
+    "Ysamples = np.zeros((10, Xsamples.shape[1]))\n",
+    "for i in range(Xsamples.shape[1]):\n",
+    "    Ysamples[Ytrain[i], i] = 1.0\n",
     "\n",
     "print (Xsamples.shape)\n",
     "print (Ysamples.shape)\n",
@@ -250,113 +264,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch:  0  Loss:  [9.767156]\n",
-      "Epoch:  1  Loss:  [2.1540244]\n",
-      "Epoch:  2  Loss:  [0.5607424]\n",
-      "Epoch:  3  Loss:  [0.217234]\n",
-      "Epoch:  4  Loss:  [0.14406332]\n",
-      "Epoch:  5  Loss:  [0.12176681]\n",
-      "Epoch:  6  Loss:  [0.11305013]\n",
-      "Epoch:  7  Loss:  [0.106271]\n",
-      "Epoch:  8  Loss:  [0.10400663]\n",
-      "Epoch:  9  Loss:  [0.10089896]\n",
-      "Epoch:  10  Loss:  [0.10073254]\n",
-      "Epoch:  11  Loss:  [0.10036767]\n",
-      "Epoch:  12  Loss:  [0.10042464]\n",
-      "Epoch:  13  Loss:  [0.10271569]\n",
-      "Epoch:  14  Loss:  [0.10192233]\n",
-      "Epoch:  15  Loss:  [0.10292225]\n",
-      "Epoch:  16  Loss:  [0.10326263]\n",
-      "Epoch:  17  Loss:  [0.10633186]\n",
-      "Epoch:  18  Loss:  [0.10422324]\n",
-      "Epoch:  19  Loss:  [0.1043802]\n",
-      "Epoch:  20  Loss:  [0.10617748]\n",
-      "Epoch:  21  Loss:  [0.10738812]\n",
-      "Epoch:  22  Loss:  [0.10494015]\n",
-      "Epoch:  23  Loss:  [0.10754273]\n",
-      "Epoch:  24  Loss:  [0.10997789]\n",
-      "Epoch:  25  Loss:  [0.11045375]\n",
-      "Epoch:  26  Loss:  [0.11017834]\n",
-      "Epoch:  27  Loss:  [0.11054774]\n",
-      "Epoch:  28  Loss:  [0.11386]\n",
-      "Epoch:  29  Loss:  [0.11196651]\n",
-      "Epoch:  30  Loss:  [0.1106842]\n",
-      "Epoch:  31  Loss:  [0.11052721]\n",
-      "Epoch:  32  Loss:  [0.11581771]\n",
-      "Epoch:  33  Loss:  [0.11256845]\n",
-      "Epoch:  34  Loss:  [0.11280917]\n",
-      "Epoch:  35  Loss:  [0.11313418]\n",
-      "Epoch:  36  Loss:  [0.11065363]\n",
-      "Epoch:  37  Loss:  [0.11572637]\n",
-      "Epoch:  38  Loss:  [0.11104327]\n",
-      "Epoch:  39  Loss:  [0.11384021]\n",
-      "Epoch:  40  Loss:  [0.1157757]\n",
-      "Epoch:  41  Loss:  [0.1126736]\n",
-      "Epoch:  42  Loss:  [0.11670491]\n",
-      "Epoch:  43  Loss:  [0.11724874]\n",
-      "Epoch:  44  Loss:  [0.11987166]\n",
-      "Epoch:  45  Loss:  [0.11601228]\n",
-      "Epoch:  46  Loss:  [0.1148913]\n",
-      "Epoch:  47  Loss:  [0.11592103]\n",
-      "Epoch:  48  Loss:  [0.11422776]\n",
-      "Epoch:  49  Loss:  [0.11439013]\n",
-      "Epoch:  50  Loss:  [0.11383043]\n",
-      "Epoch:  51  Loss:  [0.11531824]\n",
-      "Epoch:  52  Loss:  [0.12034279]\n",
-      "Epoch:  53  Loss:  [0.11744741]\n",
-      "Epoch:  54  Loss:  [0.12493929]\n",
-      "Epoch:  55  Loss:  [0.11664387]\n",
-      "Epoch:  56  Loss:  [0.11974685]\n",
-      "Epoch:  57  Loss:  [0.12007123]\n",
-      "Epoch:  58  Loss:  [0.12016963]\n",
-      "Epoch:  59  Loss:  [0.12462939]\n",
-      "Epoch:  60  Loss:  [0.11909805]\n",
-      "Epoch:  61  Loss:  [0.11789605]\n",
-      "Epoch:  62  Loss:  [0.11829267]\n",
-      "Epoch:  63  Loss:  [0.11857688]\n",
-      "Epoch:  64  Loss:  [0.12042686]\n",
-      "Epoch:  65  Loss:  [0.12061616]\n",
-      "Epoch:  66  Loss:  [0.1257971]\n",
-      "Epoch:  67  Loss:  [0.125205]\n",
-      "Epoch:  68  Loss:  [0.11454633]\n",
-      "Epoch:  69  Loss:  [0.12323891]\n",
-      "Epoch:  70  Loss:  [0.12135301]\n",
-      "Epoch:  71  Loss:  [0.12535185]\n",
-      "Epoch:  72  Loss:  [0.11773575]\n",
-      "Epoch:  73  Loss:  [0.1226948]\n",
-      "Epoch:  74  Loss:  [0.12799935]\n",
-      "Epoch:  75  Loss:  [0.12140186]\n",
-      "Epoch:  76  Loss:  [0.12044252]\n",
-      "Epoch:  77  Loss:  [0.12844089]\n",
-      "Epoch:  78  Loss:  [0.13308255]\n",
-      "Epoch:  79  Loss:  [0.13309565]\n",
-      "Epoch:  80  Loss:  [0.11918588]\n",
-      "Epoch:  81  Loss:  [0.12758884]\n",
-      "Epoch:  82  Loss:  [0.13410656]\n",
-      "Epoch:  83  Loss:  [0.12054138]\n",
-      "Epoch:  84  Loss:  [0.13100234]\n",
-      "Epoch:  85  Loss:  [0.12112583]\n",
-      "Epoch:  86  Loss:  [0.1229243]\n",
-      "Epoch:  87  Loss:  [0.12152464]\n",
-      "Epoch:  88  Loss:  [0.11720617]\n",
-      "Epoch:  89  Loss:  [0.12814361]\n",
-      "Epoch:  90  Loss:  [0.13204508]\n",
-      "Epoch:  91  Loss:  [0.134342]\n",
-      "Epoch:  92  Loss:  [0.12479665]\n",
-      "Epoch:  93  Loss:  [0.12234871]\n",
-      "Epoch:  94  Loss:  [0.13418952]\n",
-      "Epoch:  95  Loss:  [0.12621126]\n",
-      "Epoch:  96  Loss:  [0.13515887]\n",
-      "Epoch:  97  Loss:  [0.1246703]\n",
-      "Epoch:  98  Loss:  [0.12603725]\n",
-      "Epoch:  99  Loss:  [0.1354461]\n"
+      "Epoch:  0  Loss:  [0.40107977]\n",
+      "Epoch:  1  Loss:  [0.21958175]\n",
+      "Epoch:  2  Loss:  [0.1983069]\n",
+      "Epoch:  3  Loss:  [0.19898166]\n",
+      "Epoch:  4  Loss:  [0.20161784]\n",
+      "Epoch:  5  Loss:  [0.2044298]\n",
+      "Epoch:  6  Loss:  [0.20747867]\n",
+      "Epoch:  7  Loss:  [0.2107974]\n",
+      "Epoch:  8  Loss:  [0.21439463]\n",
+      "Epoch:  9  Loss:  [0.21823572]\n"
      ]
     }
    ],
@@ -366,17 +290,17 @@
     "Xtf = tf.tensor(Xsamples)\n",
     "Ytf = tf.tensor(Ysamples)\n",
     "\n",
-    "#for i in range(30):\n",
-    "#    Yhat, L, Wtf, btf = fwd(Wtf, Xtf, btf, Ytf)\n",
-    "#    print(\"Loss: \", L.numpy)\n",
-    "\n",
-    "epochs = 100\n",
-    "iterations = 100\n",
+    "batch_size = 128\n",
+    "epochs = 10\n",
+    "iterations = Xsamples.shape[1] // batch_size\n",
     "\n",
     "for i in range(epochs):\n",
     "    avg_loss = 0\n",
     "    for j in range(iterations):\n",
-    "        Yhat, L, Wtf, btf = fwd(Wtf, Xtf, btf, Ytf)\n",
+    "        offset = j * batch_size\n",
+    "        info = np.array([offset, batch_size])\n",
+    "        info_tf = tf.tensor(info)\n",
+    "        L, Wtf, btf = fwd(Wtf, btf, Xtf, Ytf, info_tf)\n",
     "        avg_loss += L.numpy\n",
     "    print(\"Epoch: \", i, \" Loss: \", avg_loss / iterations)"
    ]
